<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="weight">Weight</string>
    <string name="miles_ran">Miles Ran:</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="weight_label">000</string>
    <string name="miles_label">1</string>
    <string name="calories_label">00.0</string>
    <string name="bmi_label">00.</string>
    <string name="name_label">Name</string>
</resources>
