<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="30dp">
    tools:context="com.example.geres.burnedcaloriescalculator.MainActivity">

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="30dp"
        android:layout_marginTop="43dp"
        android:theme="@style/WidgetText"/>

    <TextView
        android:id="@+id/milesRanTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="104dp"
        android:layout_marginTop="40dp"
        android:theme="@style/WidgetText"
        android:layout_below="@+id/weightTV"
        android:layout_alignStart="@+id/caloriesTV" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/milesRanTV"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="19dp"
        android:max="30"
        android:progress="1"
        tools:layout_editor_absoluteX="352dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/height"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="184dp"
        android:layout_below="@+id/caloriesTV"
        android:layout_alignEnd="@+id/weightTV"
        android:theme="@style/WidgetText"/>

    <TextView
        android:id="@+id/caloriesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/heightTV"
        android:layout_below="@+id/milesRanTV"
        android:layout_marginTop="26dp"
        android:text="@string/calories_burned"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="261dp"
        android:theme="@style/WidgetText"/>

    <TextView
        android:id="@+id/bmiTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bmi"
        android:layout_below="@+id/heightTV"
        android:layout_alignStart="@+id/heightTV"
        android:theme="@style/WidgetText"/>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_label"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:theme="@style/WidgetText"/>

    <EditText
        android:id="@+id/weightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:theme="@style/TextViewSize"
        android:layout_above="@+id/milesRanTV"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/milesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/weightET"
        android:layout_alignTop="@+id/milesRanTV"
        android:text="@string/miles_label"
        android:theme="@style/TextViewSize"/>

    <EditText
        android:id="@+id/caloriesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/milesET"
        android:layout_alignTop="@+id/caloriesTV"
        android:text="@string/calories_label"
        android:theme="@style/TextViewSize"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/heightTV"
        android:layout_alignStart="@+id/bmiET"
        android:layout_alignEnd="@+id/caloriesET"
        android:theme="@style/TextViewSize"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/TextViewSize"
        android:layout_alignTop="@+id/spinner"
        android:layout_toEndOf="@+id/spinner" />

    <EditText
        android:id="@+id/bmiET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bmiTV"
        android:layout_toEndOf="@+id/caloriesTV"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/bmi_label"
        android:theme="@style/TextViewSize"/>


</RelativeLayout>
